<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactActivity">

    <EditText
        android:id="@+id/address"
        android:layout_width="363dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:hint="Address"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="223dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="361dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:hint="Name"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/businessNum"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:hint="Business Number"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1" />

    <Spinner
        android:id="@+id/primaryBusiness"
        android:layout_width="267dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/address"
        android:layout_marginTop="59dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="57dp"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerTitle"
        android:layout_marginLeft="51dp"
        app:layout_constraintVertical_bias="0.135"
        android:layout_marginStart="51dp"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Spinner
        android:id="@+id/province"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Contact"
        android:layout_marginTop="270dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:onClick="submitInfoButton"
        app:layout_constraintHorizontal_bias="0.556" />

    <TextView
        android:id="@+id/spinnerTitle"
        android:layout_width="160dp"
        android:layout_height="20dp"
        android:text="Primary Business Type:"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintRight_toRightOf="@+id/provinceTitle"
        android:layout_marginTop="60dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="61dp"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/provinceTitle"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="Province:"
        android:maxLines="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/province"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
