...
        android:layout_centerHorizontal="true"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="133dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/updateButton"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="166dp"
        app:layout_constraintTop_toBottomOf="@+id/businessNum"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="165dp"
        app:layout_constraintLeft_toLeftOf="parent"
...
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Erase Contact"
        android:layout_marginEnd="8dp"
        android:onClick="eraseContact"
        tools:layout_constraintRight_creator="1"
...
