<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.MainActivity">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Contact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:onClick="createContactButton"
        tools:layout_editor_absoluteY="2dp"
        app:layout_constraintHorizontal_bias="0.502" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="394dp"
        android:layout_height="451dp"
        android:layout_marginRight="-118dp"
        android:layout_marginTop="11dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton"
        tools:layout_editor_absoluteY="63dp" />

</android.support.constraint.ConstraintLayout>